--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+:root {
+  font-size: 16px;
+}
+
 .cv {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 15px auto;
+  padding: 15px;
   text-align: center;
   border: 1px solid black;
 }
