--- a/src/styles/GeneralInfoSection.css
+++ b/src/styles/GeneralInfoSection.css
@@ -2,7 +2,8 @@
   /* display: grid; */
   & .labelled-input {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 100px 1fr;
+    text-align: right;
   }
 }
 
@@ -13,6 +14,10 @@
 
   & p:first-child {
     grid-column: span 2;
+  }
+
+  & .name {
+    font-size: 2.5rem;
   }
 
   &:hover .edit-button {
