--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("./src/assets/fonts/Roboto/Roboto-VariableFont_wdth\,wght.ttf")
+    format("truetype");
+}
+
 :root {
   font-size: 16px;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
 .cv {
